fix the form field alignment

--- a/src/modules/Common/Authentication/pages/Onboarding.module.css
+++ b/src/modules/Common/Authentication/pages/Onboarding.module.css
@@ -161,8 +161,9 @@ form {
   margin: 10px 0px;
 }
 
-form label {
+form label,.label_container {
   font-weight: 600;
+  margin-top: 15px;
 }
 
 .required {
@@ -200,7 +201,7 @@ form .inputs {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin: 10px 0px 20px 0px;
+  /* margin: 10px 0px 20px 0px; */
 }
 
 .error_message {
@@ -279,7 +280,7 @@ form .form_buttons button[type="reset"] {
 }
 
 .aoi_container {
-  margin-top: 20px;
+  margin-top: 10px;
   min-width: 100%;
 }
 
